# cds-visual-analytics-2025

./: .gitignore  README.md  pyproject.toml  run.sh  setup.sh
src/assignment_1/: README.md  __init__.py  assignment_description.md  check_and_download_data.sh  config.py  download_data.py  image_search_service.py  main.py
src/assignment_1/output/: embedding_results.csv  histogram_results.csv
src/assignment_1/scripts/: __init__.py  download_data.py  embedding_search.py  histogram_search.py
src/assignment_1/services/: __init__.py  embedding_search_service.py  histogram_search_service.py
src/assignment_1/utils/: image_utils.py  path_utils.py  result_utils.py
src/assignment_2/: README.md  assignment_description.md  config.py  main.py
src/assignment_2/classifiers/: base_classifier.py  logistic_regression.py  neural_network.py
src/assignment_2/models/: base_classifier.py  logistic_regression.py  neural_network.py
src/assignment_2/output/: LogisticRegressionClassifier_info.txt  LogisticRegressionClassifier_report.txt  NeuralNetworkClassifier_info.txt  NeuralNetworkClassifier_report.txt
src/assignment_2/utils/: cifar_10.py  image_utils.py  model_evaluation.py
src/assignment_3/: README.md  assignment_description.md  config.py  main.py
src/assignment_3/data/: data_loader.py
src/assignment_3/models/: base_classifier_model.py  cnn_model.py  vgg16_transfer_learning_model.py
src/assignment_3/output/: model_comparison.txt
src/assignment_3/output/cnn/: classification_report.txt  test_metrics.json  training_history.json
src/assignment_3/output/vgg16/: classification_report.txt  test_metrics.json  training_history.json
src/assignment_3/services/: base_classifier_model.py  cnn_model.py  data_service.py  vgg16_transfer_learning_model.py
src/assignment_3/utils/: model_comparison.py
src/assignment_4/: README.md  __init__.py  assignment_description.md  config.py  main.py
src/assignment_4/data/: data_service.py
src/assignment_4/models/: face_detection_model.py
src/assignment_4/output/results/: GDL_faces_by_decade.csv  IMP_faces_by_decade.csv  JDG_faces_by_decade.csv  combined_results.csv  summary_statistics.csv
src/assignment_4/services/: __init__.py  data_service.py  face_detection_service.py
src/assignment_4/utils/: __init__.py  visualization.py
src/assignment_4/visualization/: visualization.py
src/shared_lib/: README.md  image_utils.py  logger.py  model_evaluation.py
src/shared_lib/services/: image_search.py
src/shared_lib/utils/: base_config.py  file_utils.py  image_utils.py  logger.py  model_evaluation.py  visualization.py
tests/utils/: test_file_utils.py  test_image_utils.py  test_visualization.py
