[project]
name = "visual-exam"
version = "1.0.0"
description = "Visual Analytics exam project implementing computer vision techniques including image search, feature extraction, and analysis. Built with Python 3.12 and OpenCV, demonstrating practical applications through progressive assignments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "matplotlib",
  "opencv-python",
  "scikit-learn",
  "scikeras",
  "pytest",
  "tensorflow-cpu; sys_platform == 'linux'",
  "tensorflow-macos; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "tensorflow; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "pydantic-settings>=2.8.1",
  "pydantic>=2.11.3",
  "torch>=2.0.0",
  "facenet-pytorch>=2.5.3",
  "pillow>=9.0.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "numpy>=1.24.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
